# x11-egl-es3

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json
assets/shaders/: simple.frag  simple.vert  voxmarch.frag  voxmarch.vert
inc/: libs.h
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: egl.h  gl.h  gles2.h  glx.h
lib/glad/src/: egl.c  gl.c  gles2.c  glx.c
src/: CMakeLists.txt  main.cpp
src/engine/: window.cpp  window.h
src/engine/graphics/: shader.cpp  shader.h  volume.cpp  volume.h
src/engine/graphics/voxel/: renderer.cpp  renderer.h  volume.cpp  volume.h
src/engine/window/: egl.cpp  egl.h  window.cpp  window.h  x11.cpp  x11.h
src/game/: game.cpp  game.h
test/: CMakeLists.txt  main.cpp
